Small readability fix

--- a/src/styles/_availability.scss
+++ b/src/styles/_availability.scss
@@ -4,6 +4,10 @@
   h3 {
     text-align: center;
   }
+
+  p {
+    font-size: 1.1em;
+  }
 }
 
 .availability p {
