--- a/src/styles/_cases.scss
+++ b/src/styles/_cases.scss
@@ -34,6 +34,6 @@
   }
 }
 
-.cases-info {
-  font-size: 0.9em;
+p.cases-info {
+  margin-bottom: 0.5em;
 }
