--- a/src/styles/_structure.scss
+++ b/src/styles/_structure.scss
@@ -56,9 +56,9 @@ section[role="main"] {
 }
 
 .footer-wrap {
-  background-color: #dcdcdc;
+  background-color: #eaeaea;
 
-  color: #0E1920;
+  color: #000;
 
   a {
     color: #003AB4;
